Fix: Mentioning keeps running even if previous input result was empty Enh: Darkened comment links for better readability

--- a/static/less/comment.less
+++ b/static/less/comment.less
@@ -25,6 +25,19 @@
     .media-body {
         overflow:visible;
     }
+
+    .jp-progress {
+        background-color: #dbdcdd !important;
+    }
+    .jp-play-bar {
+        background: #cacaca;
+    }
+
+    .content {
+        a {
+            color: darken(@info, 20%);
+        }
+    }
 }
 
 .comment.guest-mode {
@@ -36,16 +49,6 @@
         hr {
             display: none;
         }
-    }
-}
-
-// jPlayer Extension
-.comment {
-    .jp-progress {
-        background-color: #dbdcdd !important;
-    }
-    .jp-play-bar {
-        background: #cacaca;
     }
 }
 
